--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,32 +1,12 @@
 version: 2.1
-jobs:
+
+orbs:
+  common-config: aditi7gupta7/common-config-javaa@1.0.0
+
+workflows:
+  version: 2
   build:
-    docker:
-      - image: cimg/openjdk:11.0.12
-
-    environment:
-      JVM_OPTS: -Xmx3200m
-
-    steps:
-      - checkout
-
-      - run: ./gradlew clean build
-
-      - store_test_results:
-          path: build/test-results
-
-      - store_artifacts:
-          path: build/reports/tests/test
-          destination: test_result
-
-      - store_artifacts:
-          path: build/reports/jacoco
-          destination: test_coverage
-
-      - store_artifacts:
-          path: build/reports/pmd
-          destination: pmd
-
-      - store_artifacts:
-          path: build/reports/checkstyle
-          destination: checkstyle
+    jobs:
+      - common-config/common_build
+      - java_build:
+          executor: common-config/default
